# HYBRID-IDS-MCP

./: .gitignore  100_PERCENT_COMPLETE.md  ADD_ZMQ_INTEGRATION.md  ARCHITECTURE.md  ARCHITECTURE_EXPLAINED.md  BUGFIX_AI_ENGINE.md  BUILD_AND_RUN.md  BUILD_CPP_NIDS_WINDOWS.md  CMakeLists.txt  CODEBASE_CONTEXT.md  COMPLETE_BUILD_GUIDE.md  COMPLETE_ELK_SETUP.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLETE_NIDS_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_READY.md  CONTRIBUTING.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  DEPLOY_ELK_STACK.md  ELK_DASHBOARD_GUIDE.md  FINAL_PROJECT_SUMMARY.md  GETTING_STARTED.md  HIDS_BUGFIX_SHUTDOWN.md  HIDS_BUGFIX_WINDOWS.md  HIDS_COMPLETE.md  HIDS_GUIDE.md  HIDS_QUICKSTART.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSTALL_DOCKER.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_QUICKSTART.md  LICENSE  NIDS_COMPLETE.md  NIDS_COMPLETE_PYTHON.md  NIDS_COMPLETION_SUMMARY.md  NIDS_DESIGN.md  NIDS_QUICKSTART.md  (+42 more)
.claude/: settings.local.json
config/: ai_engine.yaml.example  mcp.yaml.example  nids.yaml.example
config/hids/: hids_config.yaml
config/nids/: nids_config.yaml
config/nids/rules/: network_attacks.yaml  web_attacks.yaml
dashboard/backend/: main.py  main_updated.py  requirements.txt  websocket.js
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/public/: index.html
dashboard/frontend/src/: App.js  index.js
dashboard/frontend/src/components/: AlertsDashboard.js  AlertsTable.js  Header.js  StartupSequence.js  StatsCard.js  SystemStatus.js
dashboard/frontend/src/components/metrics/: AttackMap.js  MetricsDashboard.js
docs/: ROADMAP.md  SIDS_README.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
elk/: docker-compose.yml
elk-simple/: docker-compose.yml
elk/elasticsearch/templates/: hybrid-ids-template.json
elk/kibana/config/: kibana.yml
elk/kibana/dashboards/: hybrid-ids-main-dashboard.ndjson  hybrid-ids-overview.ndjson  unified-security-dashboard.ndjson
elk/logstash/config/: logstash.yml
elk/logstash/pipeline/: ai-alerts.conf  hids-alerts.conf  network-features.conf  nids-alerts.conf  unified-alerts.conf
models/: model_metadata.json
scripts/: build_sids.sh  generate_test_traffic.py  setup.sh  start_hids.bat  start_hids.sh  start_hybrid_ids.bat  start_hybrid_ids.sh  start_nids.bat  start_nids.sh  test_ai_fix.py  test_real_time.ps1  verify_system.py  windows_setup.bat
src/ai/inference/: anomaly_detector.py  zmq_subscriber.py
src/ai/training/: train_models.py
src/exporters/: elasticsearch_exporter.py
src/hids/: file_monitor.py  hids_main.py  log_analyzer.py  process_monitor.py
src/integration/: alert_manager.py  event_correlator.py  hybrid_ids.py  integration_controller.py  unified_alert_manager.py
src/nids/: nids_main.cpp  sids_main.cpp
src/nids/common/: types.cpp  types.h
src/nids/features/: connection_tracker.cpp  connection_tracker.h  feature_extractor.cpp  feature_extractor.h
src/nids/ipc/: zmq_publisher.cpp  zmq_publisher.h
src/nids/parser/: packet_parser.cpp  packet_parser.h  protocol_decoder.cpp  protocol_decoder.h
src/nids/rules/: rule_engine.cpp  rule_engine.h
src/nids_python/: __init__.py  feature_extractor.py  nids_main.py  packet_capture.py  signature_ids.py
tests/: test_hids.py  test_integration.py
